--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   z-index: 9;
+  background: #463c3b;
 }
 
 .navigation {
@@ -14,8 +15,11 @@
   justify-content: space-between;
 }
 
-.logo h2 {
-  margin-bottom: 0;
+.logo a{
+  cursor: pointer;
+}
+.logo img {
+  width: 200px;
 }
 
 .nav__list {
@@ -33,6 +37,19 @@
 }
 .nav__item a:hover {
   color: #f5b70a;
+  border-color: #f5b70a;
+}
+
+.nav__item div {
+  display: none;
+  margin: 50px 0 0 0;
+}
+
+.nav__item div a {
+  font-size: 1.2rem;
+  padding: 5px 15px;
+  border: 1px solid #fff;
+  border-radius: 8px;
 }
 
 .sign {
@@ -49,11 +66,11 @@
 
 .btn-signup {
   border: 1px solid #fff;
-  border-radius: 5px;
+  border-radius: 8px;
   padding: 5px 10px;
 }
 
-.sign a:hover{
+.sign a:hover {
   color: #f5b70a;
   border-color: #f5b70a;
 }
@@ -76,7 +93,7 @@
     width: 100%;
     height: 100%;
     z-index: 99;
-    background: #0a071a7e;
+    background: #463c3b98;
     display: none;
   }
 
@@ -87,7 +104,7 @@
     width: 250px;
     height: 100%;
     z-index: 100;
-    background: #141124;
+    background: #463c3b;
     flex-direction: column;
     box-shadow: 5px 5px 15px -5px #f5b70a;
     justify-content: center !important;
@@ -110,6 +127,10 @@
     display: none;
   }
 
+  .nav__item div {
+    display: block;
+  }
+
   .nav__list {
     flex-direction: column;
   }
@@ -120,7 +141,6 @@
 
   .header {
     line-height: 40px;
-    padding: 20px 0px;
   }
 
   .mobile__menu {
@@ -128,9 +148,9 @@
     cursor: pointer;
   }
 
-  .logo h2 {
+  /* .logo h2 {
     font-size: 1.5rem;
-  }
+  } */
 
   .active__menu {
     display: block;
