--- a/src/components/hero-Dashboard/dashboard.css
+++ b/src/components/hero-Dashboard/dashboard.css
@@ -13,7 +13,7 @@
 }
 
 .img-box img {
-  width: 600px;
+  width: 100%;
 }
 
 .dashboard p {
@@ -28,6 +28,11 @@
   flex-direction: column;
   padding-left: 50px;
   padding-top: 20px;
+}
+
+.dashboard .title-order-span {
+  display: flex;
+  gap: 12px;
 }
 
 .dashboard .span-text-1 {
@@ -76,11 +81,15 @@
 
 @media only screen and (max-width: 992px) {
   .dashboard {
-    grid-template-rows: 1fr 0.3fr 0.3fr;
+    grid-template-rows: 1fr 0.8fr 0.3fr;
   }
-  
+
   .dashboard .title-order {
-    font-size: 2.5rem;
+    line-height: 50px;
+  }
+
+  .dashboard .title-order {
+    font-size: 2rem;
   }
 
   .sign-section {
@@ -91,6 +100,45 @@
     grid-area: 3 / 1 / -2 / -1;
   }
   .img-box img {
-    width: 400px;
+    /* width: 400px; */
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .dashboard {
+    grid-template-rows: 1fr 0.8fr 0.3fr;
+  }
+
+  .dashboard .title-order {
+    line-height: 50px;
+  }
+
+  .dashboard .title-order {
+    font-size: 1.5rem;
+  }
+  .dashboard .title-order,
+  .dashboard .sign-section,
+  .dashboard .about-section{
+    padding-left: 0px;
+
+  }
+
+  .dashboard .sign-section {
+    grid-area: 2 / 1 / -3 / -1;
+    gap: 10px;
+  }
+
+  .sign-section .sign-in,
+  .sign-section .sign-up {
+    border: 1px solid #c2a02f;
+    padding: 5px 30px;
+    border-radius: 40px;
+  }
+
+  .about-section {
+    grid-area: 3 / 1 / -2 / -1;
+  }
+  .img-box img {
+    width: 350px;
   }
 }
