--- a/src/components/hero-Dashboard/dashboard.css
+++ b/src/components/hero-Dashboard/dashboard.css
@@ -58,6 +58,7 @@
   padding: 10px 40px;
   border-radius: 40px;
   cursor: pointer;
+  font-size: 1.5rem;
 }
 
 .sign-section .sign-in a {
@@ -71,8 +72,8 @@
 }
 
 .sign-section .sign-in a:hover {
-    color: #382e2c;
-    /* background: none; */
+  color: #382e2c;
+  /* background: none; */
 }
 
 .about-section {
@@ -104,6 +105,11 @@
     grid-area: 2 / 1 / -3 / -1;
   }
 
+  .sign-section .sign-in a,
+  .sign-section .sign-up a {
+    font-size: 1rem;
+  }
+
   .about-section {
     grid-area: 3 / 1 / -2 / -1;
   }
@@ -132,8 +138,8 @@
     gap: 10px;
   }
 
-  .sign-section .sign-in,
-  .sign-section .sign-up {
+  .sign-section .sign-in a,
+  .sign-section .sign-up a {
     border: 1px solid #c2a02f;
     padding: 5px 30px;
     border-radius: 40px;
